--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="logo">
                     <span class="logo-text">J</span>
                 </div>
-                <span class="brand-text">Racha do Juventus</span>
+                <span class="brand-text">Racha Amigos do Juventus</span>
             </div>
             <ul class="nav-menu">
                 <li><a href="index.html" class="nav-link active">Home</a></li>
@@ -36,7 +36,7 @@
                     <span class="hero-logo-text">J</span>
                 </div>
             </div>
-            <h1 class="hero-title">Seja bem vindo ao Racha do Juventus</h1>
+            <h1 class="hero-title">Seja bem vindo ao Racha Amigos do Juventus</h1>
             <p class="hero-subtitle">O melhor futebol de final de semana do Conjunto Ceará</p>
             <button class="btn-cta">Faça parte do nosso time!</button>
         </div>
@@ -45,10 +45,10 @@
     <!-- About Section -->
     <section class="about">
         <div class="container">
-            <h2 class="section-title">Sobre o Racha do Juventus</h2>
+            <h2 class="section-title">Sobre o Racha Amigos do Juventus</h2>
             <p class="about-text">
-                O Racha do Juventus é mais que um simples grupo de futebol. Somos uma família unida pela 
-                paixão pelo esporte mais popular do mundo. Todos os domingos nos reunimos para viver 
+                O Racha Amigos do Juventus é mais que um simples grupo de futebol. Somos uma família unida e
+                apaixonadana pelo esporte mais popular do mundo. Todos os domingos nos reunimos para viver 
                 momentos únicos de competição, amizade e diversão.
             </p>
         </div>
@@ -88,17 +88,17 @@
                     <div class="schedule-list">
                         <div class="schedule-item">
                             <div class="schedule-round">Rodada 1</div>
-                            <div class="schedule-date">12/01/2025</div>
+                            <div class="schedule-date">03/08/2025</div>
                             <div class="schedule-status status-next">Próxima</div>
                         </div>
                         <div class="schedule-item">
                             <div class="schedule-round">Rodada 2</div>
-                            <div class="schedule-date">19/01/2025</div>
+                            <div class="schedule-date">10/08/2025</div>
                             <div class="schedule-status status-scheduled">Agendada</div>
                         </div>
                         <div class="schedule-item">
                             <div class="schedule-round">Rodada 3</div>
-                            <div class="schedule-date">26/01/2025</div>
+                            <div class="schedule-date">17/08/2025</div>
                             <div class="schedule-status status-scheduled">Agendada</div>
                         </div>
                     </div>
@@ -107,16 +107,16 @@
                     <h3 class="schedule-title">Últimos Resultados</h3>
                     <div class="results-list">
                         <div class="result-item">
-                            <div class="result-match">Time A 3 x 2 Time B</div>
-                            <div class="result-date">05/01/2025</div>
+                            <div class="result-match">Time Laranja 3 x 1 Time Vermelho</div>
+                            <div class="result-date">27/07/2025</div>
                         </div>
                         <div class="result-item">
-                            <div class="result-match">Time C 1 x 4 Time D</div>
-                            <div class="result-date">29/12/2024</div>
+                            <div class="result-match">Time Vermelho 0 x 2 Time Azul</div>
+                            <div class="result-date">27/07/2024=5</div>
                         </div>
                         <div class="result-item">
-                            <div class="result-match">Time E 2 x 2 Time F</div>
-                            <div class="result-date">22/12/2024</div>
+                            <div class="result-match">Time Azul 2 x 0 Time Laranja</div>
+                            <div class="result-date">27/07/2025</div>
                         </div>
                     </div>
                 </div>
