--- a/temporada2025.html
+++ b/temporada2025.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temporada 2025 - Racha do Juventus</title>
+    <title>Temporada 2025 - Racha Amigos do Juventus</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -15,7 +15,7 @@
                 <div class="logo">
                     <span class="logo-text">J</span>
                 </div>
-                <span class="brand-text">Racha do Juventus</span>
+                <span class="brand-text">Racha Amigos do Juventus</span>
             </div>
             <ul class="nav-menu">
                 <li><a href="index.html" class="nav-link">Home</a></li>
@@ -42,15 +42,15 @@
             <h2 class="section-title">Estatísticas da Temporada</h2>
             <div class="stats-grid">
                 <div class="stat-card">
-                    <div class="stat-number">24</div>
+                    <div class="stat-number">40</div>
                     <div class="stat-label">Atletas Participantes</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">12</div>
+                    <div class="stat-number">51</div>
                     <div class="stat-label">Rodadas Programadas</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">3</div>
+                    <div class="stat-number">30</div>
                     <div class="stat-label">Rodadas Realizadas</div>
                 </div>
                 <div class="stat-card">
@@ -67,49 +67,53 @@
             <h2 class="section-title">Calendário de Jogos</h2>
             <div class="calendar-grid">
                 <div class="calendar-month">
-                    <h3 class="month-title">Janeiro 2025</h3>
+                    <h3 class="month-title">Agosto 2025</h3>
                     <div class="games-list">
                         <div class="game-item completed">
-                            <div class="game-date">05/01</div>
+                            <div class="game-date">03/08</div>
                             <div class="game-info">
                                 <div class="game-teams">Time A vs Time B</div>
+                                <div class="game-result">3 x 2</div>
+                                 <div class="game-teams">Time A vs Time C</div>
+                                <div class="game-result">3 x 2</div>
+                                 <div class="game-teams">Time C vs Time B</div>
                                 <div class="game-result">3 x 2</div>
                             </div>
                             <div class="game-status">Finalizado</div>
                         </div>
                         <div class="game-item next">
-                            <div class="game-date">12/01</div>
+                            <div class="game-date">10/08</div>
                             <div class="game-info">
-                                <div class="game-teams">Rodada 1 - Sorteio</div>
-                                <div class="game-time">09:00</div>
-                            </div>
-                            <div class="game-status">Próximo</div>
-                        </div>
-                        <div class="game-item scheduled">
-                            <div class="game-date">19/01</div>
-                            <div class="game-info">
-                                <div class="game-teams">Rodada 2 - Sorteio</div>
-                                <div class="game-time">09:00</div>
+                                <div class="game-teams">Rodada 30 - Sorteio</div>
+                                <div class="game-time">07:30</div>
                             </div>
                             <div class="game-status">Agendado</div>
                         </div>
                         <div class="game-item scheduled">
-                            <div class="game-date">26/01</div>
+                            <div class="game-date">17/07</div>
                             <div class="game-info">
-                                <div class="game-teams">Rodada 3 - Sorteio</div>
-                                <div class="game-time">09:00</div>
+                                <div class="game-teams">Rodada 31 - Sorteio</div>
+                                <div class="game-time">07:30</div>
+                            </div>
+                            <div class="game-status">Agendado</div>
+                        </div>
+                        <div class="game-item scheduled">
+                            <div class="game-date">24/07</div>
+                            <div class="game-info">
+                                <div class="game-teams">Rodada 32 - Sorteio</div>
+                                <div class="game-time">07:30</div>
                             </div>
                             <div class="game-status">Agendado</div>
                         </div>
                     </div>
                 </div>
                 <div class="calendar-month">
-                    <h3 class="month-title">Fevereiro 2025</h3>
+                    <h3 class="month-title">Setembro 2025</h3>
                     <div class="games-list">
                         <div class="game-item scheduled">
                             <div class="game-date">02/02</div>
                             <div class="game-info">
-                                <div class="game-teams">Rodada 4 - Sorteio</div>
+                                <div class="game-teams">Rodada 33 - Sorteio</div>
                                 <div class="game-time">09:00</div>
                             </div>
                             <div class="game-status">Agendado</div>
