--- a/temporada2025.html
+++ b/temporada2025.html
@@ -64,7 +64,7 @@
     <!-- Calendar -->
     <section class="calendar">
         <div class="container">
-            <h2 class="section-title">Calendário de Jogos</h2>
+            <h2 class="section-title">Calendário e Resultados dos Jogos</h2>
             <div class="calendar-grid">
                 <div class="calendar-month">
                     <h3 class="month-title">Agosto 2025</h3>
@@ -72,12 +72,18 @@
                         <div class="game-item completed">
                             <div class="game-date">03/08</div>
                             <div class="game-info">
+                                <div class="game-teams">Rodada 31 - Finalizada</div>
                                 <div class="game-teams">Time A vs Time B</div>
                                 <div class="game-result">3 x 2</div>
+                                <div class="game-teams">Gols: Fulano 2/ Beltrano 3</div>
                                  <div class="game-teams">Time A vs Time C</div>
                                 <div class="game-result">3 x 2</div>
+                                <div class="game-teams">Gols: Fulano 2/ Beltrano 3</div>
                                  <div class="game-teams">Time C vs Time B</div>
                                 <div class="game-result">3 x 2</div>
+                                <div class="game-teams">Gols: Fulano 2/ Beltrano 3</div>
+                                <div class="game-teams">Time Campeão: Time Azul </div>
+                                <div class="game-teams">Craque do Racha: Fulano</div>
                             </div>
                             <div class="game-status">Finalizado</div>
                         </div>
