--- a/temporada2025.html
+++ b/temporada2025.html
@@ -77,7 +77,6 @@
                                 <div class="game-teams">Gols: Fulano 2/ Beltrano 3</div>
                                 
                                 <div class="game-teams">Time A vs Time C</div>
-                                <div class="game-result">3 x 2</div>
                                 <div class="game-teams">Gols: Fulano 2/ Beltrano 3</div>
                                
                                 <div class="game-teams">Time C vs Time B</div>
@@ -92,7 +91,7 @@
                         <div class="game-item next">
                             <div class="game-date">10/08</div>
                             <div class="game-info">
-                                <div class="game-teams">Rodada 30 - Sorteio</div>
+                                <div class="game-teams">RODADA 32 - Sorteio</div>
                                 <div class="game-time">07:30</div>
                             </div>
                             <div class="game-status">Agendado</div>
@@ -100,7 +99,7 @@
                         <div class="game-item scheduled">
                             <div class="game-date">17/07</div>
                             <div class="game-info">
-                                <div class="game-teams">Rodada 31 - Sorteio</div>
+                                <div class="game-teams">RODADA 33 - Sorteio</div>
                                 <div class="game-time">07:30</div>
                             </div>
                             <div class="game-status">Agendado</div>
@@ -108,10 +107,16 @@
                         <div class="game-item scheduled">
                             <div class="game-date">24/07</div>
                             <div class="game-info">
-                                <div class="game-teams">Rodada 32 - Sorteio</div>
+                                <div class="game-teams">Rodada 33 - Sorteio</div>
                                 <div class="game-time">07:30</div>
                             </div>
                             <div class="game-status">Agendado</div>
+                        </div>
+                        <div class="game-item scheduled">
+                            <div class="game-date">31/08</div>
+                            <div class="game-info">
+                                <div class="game-teams">RODADA 34 - Sorteio</div>
+                                <div class="game-time">07:30</div>
                         </div>
                     </div>
                 </div>
@@ -119,34 +124,34 @@
                     <h3 class="month-title">Setembro 2025</h3>
                     <div class="games-list">
                         <div class="game-item scheduled">
-                            <div class="game-date">02/02</div>
+                            <div class="game-date">07/09</div>
                             <div class="game-info">
-                                <div class="game-teams">Rodada 33 - Sorteio</div>
-                                <div class="game-time">09:00</div>
+                                <div class="game-teams">RODADA 35 - Sorteio</div>
+                                <div class="game-time">07:30</div>
                             </div>
                             <div class="game-status">Agendado</div>
                         </div>
                         <div class="game-item scheduled">
-                            <div class="game-date">09/02</div>
+                            <div class="game-date">14/09</div>
                             <div class="game-info">
-                                <div class="game-teams">Rodada 5 - Sorteio</div>
-                                <div class="game-time">09:00</div>
+                                <div class="game-teams">RODADA 36 - Sorteio</div>
+                                <div class="game-time">07:30</div>
                             </div>
                             <div class="game-status">Agendado</div>
                         </div>
                         <div class="game-item scheduled">
-                            <div class="game-date">16/02</div>
+                            <div class="game-date">21/09</div>
                             <div class="game-info">
-                                <div class="game-teams">Rodada 6 - Sorteio</div>
-                                <div class="game-time">09:00</div>
+                                <div class="game-teams">RODADA 37 - Sorteio</div>
+                                <div class="game-time">07:30</div>
                             </div>
                             <div class="game-status">Agendado</div>
                         </div>
                         <div class="game-item scheduled">
-                            <div class="game-date">23/02</div>
+                            <div class="game-date">28/09</div>
                             <div class="game-info">
-                                <div class="game-teams">Rodada 7 - Sorteio</div>
-                                <div class="game-time">09:00</div>
+                                <div class="game-teams">RODADA 36 - Sorteio</div>
+                                <div class="game-time">07:30</div>
                             </div>
                             <div class="game-status">Agendado</div>
                         </div>
