--- a/temporada2025.html
+++ b/temporada2025.html
@@ -210,15 +210,14 @@
                 <div class="rule-item">
                     <h3 class="rule-title">Formato do Campeonato</h3>
                     <p class="rule-text">
-                        A temporada 2025 será disputada em formato de pontos corridos, com 12 rodadas.
-                        Os times são sorteados a cada rodada para garantir maior equilíbrio.
+                        A temporada 2025 será disputada em formato de rodadas. Os times são sorteados a cada rodada para garantir maior equilíbrio.
                     </p>
                 </div>
                 <div class="rule-item">
                     <h3 class="rule-title">Horário dos Jogos</h3>
                     <p class="rule-text">
-                        Todos os jogos acontecem aos domingos, com início às 09:00h.
-                        Local: Campo do Conjunto Ceará.
+                        Todos os jogos acontecem aos domingos, com início às 07:30h.
+                        Local: Areninha do Conjunto Ceará II.
                     </p>
                 </div>
                 <div class="rule-item">
@@ -231,8 +230,7 @@
                 <div class="rule-item">
                     <h3 class="rule-title">Premiação</h3>
                     <p class="rule-text">
-                        Ao final da temporada, haverá premiação para o time campeão,
-                        artilheiro da competição e melhor goleiro.
+                        Ao final da temporada, haverá premiação para o artilheiro, melhor goleiro e destaque da temporada.
                     </p>
                 </div>
             </div>
@@ -242,7 +240,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 Racha do Juventus. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Racha Amigos do Juventus. Todos os direitos reservados.</p>
         </div>
     </footer>
 
