--- a/temporada2025.html
+++ b/temporada2025.html
@@ -54,7 +54,7 @@
                     <div class="stat-label">Rodadas Realizadas</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">47</div>
+                    <div class="stat-number">62</div>
                     <div class="stat-label">Gols Marcados</div>
                 </div>
             </div>
@@ -80,7 +80,6 @@
                                 <div class="game-teams">Gols: Fulano 2/ Beltrano 3</div>
                                
                                 <div class="game-teams">Time C vs Time B</div>
-                                <div class="game-result">3 x 2</div>
                                 <div class="game-teams">Gols: Fulano 2/ Beltrano 3</div>
                            
                                 <div class="game-teams">Time Campeão: Time Azul </div>
@@ -91,7 +90,7 @@
                         <div class="game-item next">
                             <div class="game-date">10/08</div>
                             <div class="game-info">
-                                <div class="game-teams">RODADA 32 - Sorteio</div>
+                                <div class="game-teams">RODADA 32</div>
                                 <div class="game-time">07:30</div>
                             </div>
                             <div class="game-status">Agendado</div>
@@ -99,7 +98,7 @@
                         <div class="game-item scheduled">
                             <div class="game-date">17/07</div>
                             <div class="game-info">
-                                <div class="game-teams">RODADA 33 - Sorteio</div>
+                                <div class="game-teams">RODADA 33/div>
                                 <div class="game-time">07:30</div>
                             </div>
                             <div class="game-status">Agendado</div>
@@ -107,7 +106,7 @@
                         <div class="game-item scheduled">
                             <div class="game-date">24/07</div>
                             <div class="game-info">
-                                <div class="game-teams">Rodada 33 - Sorteio</div>
+                                <div class="game-teams">Rodada 33</div>
                                 <div class="game-time">07:30</div>
                             </div>
                             <div class="game-status">Agendado</div>
@@ -115,7 +114,7 @@
                         <div class="game-item scheduled">
                             <div class="game-date">31/08</div>
                             <div class="game-info">
-                                <div class="game-teams">RODADA 34 - Sorteio</div>
+                                <div class="game-teams">RODADA 34</div>
                                 <div class="game-time">07:30</div>
                         </div>
                     </div>
@@ -126,7 +125,7 @@
                         <div class="game-item scheduled">
                             <div class="game-date">07/09</div>
                             <div class="game-info">
-                                <div class="game-teams">RODADA 35 - Sorteio</div>
+                                <div class="game-teams">RODADA 35</div>
                                 <div class="game-time">07:30</div>
                             </div>
                             <div class="game-status">Agendado</div>
@@ -134,7 +133,7 @@
                         <div class="game-item scheduled">
                             <div class="game-date">14/09</div>
                             <div class="game-info">
-                                <div class="game-teams">RODADA 36 - Sorteio</div>
+                                <div class="game-teams">RODADA 36</div>
                                 <div class="game-time">07:30</div>
                             </div>
                             <div class="game-status">Agendado</div>
@@ -142,7 +141,7 @@
                         <div class="game-item scheduled">
                             <div class="game-date">21/09</div>
                             <div class="game-info">
-                                <div class="game-teams">RODADA 37 - Sorteio</div>
+                                <div class="game-teams">RODADA 37</div>
                                 <div class="game-time">07:30</div>
                             </div>
                             <div class="game-status">Agendado</div>
@@ -150,7 +149,7 @@
                         <div class="game-item scheduled">
                             <div class="game-date">28/09</div>
                             <div class="game-info">
-                                <div class="game-teams">RODADA 36 - Sorteio</div>
+                                <div class="game-teams">RODADA 36</div>
                                 <div class="game-time">07:30</div>
                             </div>
                             <div class="game-status">Agendado</div>
@@ -170,7 +169,6 @@
                     <div class="scorer-position">1º</div>
                     <div class="scorer-info">
                         <div class="scorer-name">João Silva</div>
-                        <div class="scorer-team">Time A</div>
                     </div>
                     <div class="scorer-goals">8 gols</div>
                 </div>
@@ -178,7 +176,6 @@
                     <div class="scorer-position">2º</div>
                     <div class="scorer-info">
                         <div class="scorer-name">Pedro Santos</div>
-                        <div class="scorer-team">Time C</div>
                     </div>
                     <div class="scorer-goals">6 gols</div>
                 </div>
