--- a/temporada2025.html
+++ b/temporada2025.html
@@ -163,7 +163,45 @@
     <!-- Top Scorers -->
     <section class="top-scorers">
         <div class="container">
-            <h2 class="section-title">Artilheiros da Temporada</h2>
+            <h2 class="section-title">Artilharia</h2>
+            <div class="scorers-list">
+                <div class="scorer-item">
+                    <div class="scorer-position">1º</div>
+                    <div class="scorer-info">
+                        <div class="scorer-name">João Silva</div>
+                    </div>
+                    <div class="scorer-goals">8 gols</div>
+                </div>
+                <div class="scorer-item">
+                    <div class="scorer-position">2º</div>
+                    <div class="scorer-info">
+                        <div class="scorer-name">Pedro Santos</div>
+                    </div>
+                    <div class="scorer-goals">6 gols</div>
+                </div>
+                <div class="scorer-item">
+                    <div class="scorer-position">3º</div>
+                    <div class="scorer-info">
+                        <div class="scorer-name">Carlos Oliveira</div>
+                        <div class="scorer-games">jogos: B</div>
+                    </div>
+                    <div class="scorer-goals">5 gols</div>
+                </div>
+                <div class="scorer-item">
+                    <div class="scorer-position">4º</div>
+                    <div class="scorer-info">
+                        <div class="scorer-name">Rafael Lima</div>
+                        <div class="scorer-games">Jogo: 2</div>
+                    </div>
+                    <div class="scorer-goals">4 gols</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="top-scorers">
+        <div class="container">
+            <h2 class="section-title">Goleiro menos vasado</h2>
             <div class="scorers-list">
                 <div class="scorer-item">
                     <div class="scorer-position">1º</div>
@@ -199,6 +237,7 @@
         </div>
     </section>
 
+                
     <!-- Rules -->
     <section class="rules">
         <div class="container">
