--- a/temporada2025.html
+++ b/temporada2025.html
@@ -169,6 +169,7 @@
                     <div class="scorer-position">1º</div>
                     <div class="scorer-info">
                         <div class="scorer-name">João Silva</div>
+                        <div class="scorer-games">jogos: B</div>
                     </div>
                     <div class="scorer-goals">8 gols</div>
                 </div>
@@ -176,6 +177,7 @@
                     <div class="scorer-position">2º</div>
                     <div class="scorer-info">
                         <div class="scorer-name">Pedro Santos</div>
+                        <div class="scorer-games">jogos: B</div>
                     </div>
                     <div class="scorer-goals">6 gols</div>
                 </div>
@@ -191,7 +193,7 @@
                     <div class="scorer-position">4º</div>
                     <div class="scorer-info">
                         <div class="scorer-name">Rafael Lima</div>
-                        <div class="scorer-games">Jogo: 2</div>
+                        <div class="scorer-games">Jogos: 2</div>
                     </div>
                     <div class="scorer-goals">4 gols</div>
                 </div>
@@ -201,14 +203,15 @@
 
     <section class="top-scorers">
         <div class="container">
-            <h2 class="section-title">Goleiro menos vasado</h2>
+            <h2 class="section-title">Goleiro menos vazado</h2>
             <div class="scorers-list">
                 <div class="scorer-item">
                     <div class="scorer-position">1º</div>
                     <div class="scorer-info">
                         <div class="scorer-name">João Silva</div>
+                        <div class="scorer-games">jogos: B</div>
                     </div>
-                    <div class="scorer-goals">8 gols</div>
+                    <div class="scorer-goals">8 gols vazados</div>
                 </div>
                 <div class="scorer-item">
                     <div class="scorer-position">2º</div>
