--- a/temporada2025.html
+++ b/temporada2025.html
@@ -209,32 +209,33 @@
                     <div class="scorer-position">1º</div>
                     <div class="scorer-info">
                         <div class="scorer-name">João Silva</div>
-                        <div class="scorer-games">jogos: B</div>
+                        <div class="scorer-games">jogos: 7</div>
                     </div>
-                    <div class="scorer-goals">8 gols vazados</div>
+                    <div class="scorer-goals">Gols vazados: 3</div>
                 </div>
                 <div class="scorer-item">
                     <div class="scorer-position">2º</div>
                     <div class="scorer-info">
                         <div class="scorer-name">Pedro Santos</div>
+                        <div class="scorer-games">Jogos: 8</div>
                     </div>
-                    <div class="scorer-goals">6 gols</div>
+                    <div class="scorer-goals">Gols vazados: 4</div>
                 </div>
                 <div class="scorer-item">
                     <div class="scorer-position">3º</div>
                     <div class="scorer-info">
                         <div class="scorer-name">Carlos Oliveira</div>
-                        <div class="scorer-team">Time B</div>
+                        <div class="scorer-games">Jogos: 8</div>
                     </div>
-                    <div class="scorer-goals">5 gols</div>
+                    <div class="scorer-goals">Gols vazados: 5</div>
                 </div>
                 <div class="scorer-item">
                     <div class="scorer-position">4º</div>
                     <div class="scorer-info">
                         <div class="scorer-name">Rafael Lima</div>
-                        <div class="scorer-team">Time D</div>
+                        <div class="scorer-games">Jogos: 8</div>
                     </div>
-                    <div class="scorer-goals">4 gols</div>
+                    <div class="scorer-goals">Gosl vazados: 8</div>
                 </div>
             </div>
         </div>
@@ -260,16 +261,9 @@
                     </p>
                 </div>
                 <div class="rule-item">
-                    <h3 class="rule-title">Sistema de Pontuação</h3>
-                    <p class="rule-text">
-                        Vitória: 3 pontos | Empate: 1 ponto | Derrota: 0 pontos.
-                        Em caso de empate na classificação, o critério de desempate é o saldo de gols.
-                    </p>
-                </div>
-                <div class="rule-item">
                     <h3 class="rule-title">Premiação</h3>
                     <p class="rule-text">
-                        Ao final da temporada, haverá premiação para o artilheiro, melhor goleiro e destaque da temporada.
+                        Ao final da temporada, haverá premiação para o artilheiro e melhor goleiro.
                     </p>
                 </div>
             </div>
